# casa-ha-app

./: .dockerignore  .gitattributes  .gitignore  .worktreeinclude  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pytest.ini  repository.yaml
.claude/: ha-prod-console.yml  prod.yml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
casa-agent/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  build.yaml  config.yaml  requirements.txt
docs/: MEMORY-ROADMAP.md
scripts/: eval_scope_dist.py  run_sweep.py  setup-dev.sh
test-local/: Dockerfile.test  Makefile  README.md  mock-supervisor.py  options.auth.json  options.json  options.json.example
test-local/mock-claude-sdk/: pyproject.toml
test-local/mock-claude-sdk/claude_agent_sdk/: __init__.py
tests/: conftest.py  plugin_fixtures.py  role_artifact_stub.py  session_reg_helpers.py  specialist_fixtures.py  test_admin_reload_route.py  test_agent_auto_recall_unavailable.py  test_agent_capability_log.py  test_agent_current_time_block.py  test_agent_home_provisioning.py  test_agent_init_signature.py  test_agent_loader.py  test_agent_loader_executors.py  test_agent_loader_prompt_file.py  test_agent_loader_trigger_auth.py  test_agent_meta_scope.py  test_agent_origin_scope_stamp.py  test_agent_partial_streaming.py  test_agent_plugin_binding.py  test_agent_pooling.py  test_agent_process.py  test_agent_process_scope.py  test_agent_process_sqlite.py  test_agent_read_path.py  test_agent_read_tiers.py  test_agent_registry.py  test_ask_gates.py  (+406 more)
(+445 files in other folders)
