[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-agent-sdk"
version = "0.0.0+mock"
description = "Offline test shim for casa E2E suite. Do not publish."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_agent_sdk*"]
